--- a/netflix.htm
+++ b/netflix.htm
@@ -7,16 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo-netflix.css">
+    <link rel="stylesheet" href="estilo-netflix.css">
 </head>
 <body>
     <section>
         <h1>Quem está assistindo?</h1>
         <div class="row">
-            <img src="/images/perfil1.png" alt="Imagem Perfil 1" class="col">
-            <img src="/images/perfil2.png" alt="Imagem Perfil 2" class="col">
-            <img src="/images/perfil3.png" alt="Imagem Perfil 3" class="col">
-            <img src="/images/perfil4.jpg" alt="Imagem Perfil 4" class="col">
+            <img src="perfil1.png" alt="Imagem Perfil 1" class="col">
+            <img src="perfil2.png" alt="Imagem Perfil 2" class="col">
+            <img src="perfil3.png" alt="Imagem Perfil 3" class="col">
+            <img src="perfil4.jpg" alt="Imagem Perfil 4" class="col">
         </div>
         <input type="button" value="Gerenciar Perfis" id="btn-perfis">
     </section>
