--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <h1><a href="#">FakeFlix</a></h1>
             <div id="div-btn">
-                <a href="login.htm"><input type="button" value="Entrar" id="btn-entrar"></a>
+                <a href="login.html"><input type="button" value="Entrar" id="btn-entrar"></a>
             </div>
         </nav>
     </header>
