--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h1><a href="index.htm" style="text-decoration: none; color: red;">FakeFlix</a></h1>
+            <h1><a href="index.html" style="text-decoration: none; color: red;">FakeFlix</a></h1>
         </nav>
     </header>
     <section>
@@ -24,7 +24,7 @@
             <p>
                 <input type="password" name="" id="" placeholder="Senha" class="caixas-txt">
             </p>
-            <a href="netflix.htm"><input type="button" value="Entrar" id="btn-login"></a>
+            <a href="netflix.html"><input type="button" value="Entrar" id="btn-login"></a>
             <p>OU</p>
             <input type="button" value="Usar um código de acesso" id="btn-cd">
             <a href="#">
