Front-end finalizado

--- a/criar-conta.htm
+++ b/criar-conta.htm
@@ -14,8 +14,8 @@
         <header>
             <nav>
                 <h1>FakeFlix</h1>
-                <a href="login.html">
-                    <p id="entrar">Entrar</p>
+                <a href="login.htm">
+                    <p>Entrar</p>
                 </a>
             </nav>
         </header>
