--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
         <nav>
             <h1><a href="#">FakeFlix</a></h1>
             <div id="div-btn">
-                <a href="login.html"><input type="button" value="Entrar" id="btn-entrar"></a>
+                <a href="login.htm"><input type="button" value="Entrar" id="btn-entrar"></a>
             </div>
         </nav>
     </header>
@@ -25,7 +25,7 @@
             <p>Quer assistir? Informe seu email para criar ou reiniciar sua assinatura.</p>
             <div style="text-align: center;">
                 <input type="email" name="" id="email" placeholder="Email">
-                <a href="login.htm"><input type="button" value="Vamos lá >" id="btn"></a>
+                <a href="criar-conta.htm"><input type="button" value="Vamos lá >" id="btn"></a>
             </div>
         </div>
     </section>
