--- a/login.htm
+++ b/login.htm
@@ -24,7 +24,7 @@
             <p>
                 <input type="password" name="" id="" placeholder="Senha" class="caixas-txt">
             </p>
-            <a href="netflix.html"><input type="button" value="Entrar" id="btn-login"></a>
+            <a href="netflix.htm"><input type="button" value="Entrar" id="btn-login"></a>
             <p>OU</p>
             <input type="button" value="Usar um código de acesso" id="btn-cd">
             <a href="#">
