--- a/login.htm
+++ b/login.htm
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <h1><a href="index.html" style="text-decoration: none; color: red;">FakeFlix</a></h1>
+            <h1><a href="index.htm" style="text-decoration: none; color: red;">FakeFlix</a></h1>
         </nav>
     </header>
     <section>
